# unwelcoming-watcher

./: .gitignore  .pre-commit-config.yaml  README.md  alembic.ini  example.env  main.py  pyproject.toml  settings.toml
alembic/: env.py
alembic/versions/: 2024_03_19_1351-74101c348bb2_create_tables_user_group_user_group.py  2024_03_19_1938-7e82f66da9e0_add_columns_user_is_bot_group_is_admin_.py  2024_03_22_2101-2f2c99ae26b8_create_tables_user_group_user_group.py
bot/: __main__.py  consts.py  loggers.py  settings.py
bot/app/: commands.py  editors.py  formatters.py  handlers.py  helpers.py  informators.py  kickers.py  on_events.py  ptbclient.py  pyroclient.py  senders.py
bot/db/: __init__.py  getters.py  helpers.py  inserters.py  models.py  types.py  updaters.py
bot/extra/: __init__.py  loggers.py
